fix: z-index values

--- a/src/components/PlayerStats/BatterContentGraphs/FilteredGraphs/GraphsHeader/GraphsHeader.module.scss
+++ b/src/components/PlayerStats/BatterContentGraphs/FilteredGraphs/GraphsHeader/GraphsHeader.module.scss
@@ -6,7 +6,6 @@
 	z-index: 2;
 
 	@media screen and (max-width: 800px) {
-		z-index: 0;
 		top: calc(var(--desktop-nav-height) + 132px + 58px);
   }
 
